[project]
name = "l3june26-ap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.0",
    "attrs==26.1.0",
    "boto3-stubs==1.43.33",
    "botocore-stubs==1.43.14",
    "brotli==1.2.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "colorama==0.4.6",
    "ddgs==9.14.4",
    "distro==1.9.0",
    "fake-useragent==2.2.0",
    "fastuuid==0.14.0",
    "filelock==3.29.4",
    "frozenlist==1.8.0",
    "fsspec==2026.6.0",
    "grandalf>=0.8",
    "greenlet==3.5.2",
    "groq==0.37.1",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.5.1",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.20.1",
    "hyperframe==6.1.0",
    "idna==3.18",
    "importlib-metadata==8.9.0",
    "iniconfig==2.3.0",
    "ipykernel>=7.3.0",
    "jinja2==3.1.6",
    "jiter==0.15.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "langchain==1.3.9",
    "langchain-classic==1.0.8",
    "langchain-community==0.4.2",
    "langchain-core==1.4.7",
    "langchain-groq==1.1.3",
    "langchain-ollama==1.1.0",
    "langchain-protocol==0.0.17",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.2.5",
    "langgraph-checkpoint==4.1.1",
    "langgraph-prebuilt==1.1.0",
    "langgraph-sdk==0.4.2",
    "langsmith==0.8.16",
    "litellm==1.89.2",
    "lxml==6.1.1",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "multidict==6.7.1",
    "mypy-boto3-bedrock-runtime==1.43.30",
    "numpy==2.4.6",
    "ollama==0.6.2",
    "openai==2.43.0",
    "opik==2.0.71",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "packaging==26.2",
    "pip==26.1.2",
    "pip-system-certs==5.3",
    "pluggy==1.6.0",
    "primp==1.3.1",
    "propcache==0.5.2",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.1",
    "pygments==2.20.0",
    "pytest==9.1.0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "rapidfuzz==3.14.5",
    "referencing==0.37.0",
    "regex==2026.5.9",
    "requests==2.34.2",
    "requests-toolbelt==1.0.0",
    "rich==15.0.0",
    "rpds-py==2026.5.1",
    "sentry-sdk==2.63.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "sqlalchemy==2.0.51",
    "tavily-python==0.7.26",
    "tenacity==9.1.4",
    "tiktoken==0.13.0",
    "tokenizers==0.23.1",
    "tqdm==4.68.3",
    "tree-sitter==0.25.2",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "truststore==0.10.4",
    "typer==0.25.1",
    "types-awscrt==0.34.1",
    "types-s3transfer==0.16.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uuid-utils==0.16.1",
    "uuid6==2025.0.1",
    "watchfiles==1.2.0",
    "websockets==15.0.1",
    "xxhash==3.7.0",
    "yarl==1.24.2",
    "zipp==4.1.0",
    "zstandard==0.25.0",
]
